# py-solidity-ast

./: LICENSE  README.md  dependencies.py  file.json  grammar.py  main.py  nodes.py  plan.txt  pyproject.toml  schema.js  test.py
solidity_parser/: README.md  main.py  nodes.py
