
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-solidity-ast"
version = "0.1.4"
authors = [
  { name="dev0cloo", email="etor.ocloo@gmail.com" }, { name="0xAfroSec", email="afrosecaudits@gmail.com" } 
]
maintainers = [{ name="dev0cloo", email="etor.ocloo@gmail.com" }, { name="0xAfroSec", email="afrosecaudits@gmail.com" }
  ]
license = { file = "LICENSE" }
description = "A Python library for parsing and working with the AST output of the Solc compiler"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["solidity", "AST", "parser", "solc"]
[project.urls]
"Homepage" = "https://github.com/AfroSec-Audits/py-solidity-ast"

[tool.hatch.build]
include = [
  "/solidity_parser"]